--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
     // font-size: 62.5%;
+    scroll-behavior: smooth;
 
     @media only screen and (min-width: 96rem) {
       font-size: 16px;
@@ -67,6 +68,13 @@
 
     &:hover {
       @apply bg-primary-main text-white border-primary-main;
+    }
+  }
+
+  .scrollbar-none {
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      scrollbar-width: none;
     }
   }
 }
