--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,7 +58,7 @@
   }
 
   .btn {
-    @apply font-semibold text-base rounded-2xl py-3  px-5 transition-all;
+    @apply font-semibold text-base rounded-2xl py-3  px-5 transition-all flex items-center justify-center;
   }
 
   .btn-outline {
